@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2019, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2019, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -27,13 +27,12 @@ package jdk.jpackage.internal;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.List;
 import java.util.Collection;
-import java.util.Objects;
 import java.util.Collections;
-import java.util.Set;
-import java.util.ArrayList;
 import java.util.Iterator;
+import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.function.Predicate;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
@@ -45,10 +44,7 @@ import java.util.stream.Stream;
  */
 public final class LibProvidersLookup {
     static boolean supported() {
-        return (new ToolValidator(TOOL_LDD).validate() == null);
-    }
-
-    public LibProvidersLookup() {
+        return (new ToolValidator(TOOL_LDD).setCommandLine("--version").validate() == null);
     }
 
     LibProvidersLookup setPackageLookup(PackageLookup v) {
@@ -70,16 +66,17 @@ public final class LibProvidersLookup {
         // Get the list of unique package names.
         List<String> neededPackages = neededLibs.stream().map(libPath -> {
             try {
-                List<String> packageNames = packageLookup.apply(libPath).filter(
-                        Objects::nonNull).filter(Predicate.not(String::isBlank)).distinct().collect(
-                        Collectors.toList());
-                Log.verbose(String.format("%s is provided by %s", libPath, packageNames));
+                List<String> packageNames = packageLookup.apply(libPath)
+                        .filter(Objects::nonNull)
+                        .filter(Predicate.not(String::isBlank))
+                        .distinct()
+                        .toList();
+                Log.trace("%s is provided by %s", libPath, packageNames);
                 return packageNames;
             } catch (IOException ex) {
                 // Ignore and keep going
-                Log.verbose(ex);
-                List<String> packageNames = Collections.emptyList();
-                return packageNames;
+                Log.trace(ex, "Failed to get required packages for [%s]", libPath);
+                return List.<String>of();
             }
         }).flatMap(List::stream).sorted().distinct().toList();
 
@@ -87,23 +84,20 @@ public final class LibProvidersLookup {
     }
 
     private static List<Path> getNeededLibsForFile(Path path) throws IOException {
-        List<Path> result = new ArrayList<>();
-        int ret = Executor.of(TOOL_LDD, path.toString()).setOutputConsumer(lines -> {
-            lines.map(line -> {
-                Matcher matcher = LIB_IN_LDD_OUTPUT_REGEX.matcher(line);
-                if (matcher.find()) {
-                    return matcher.group(1);
-                }
-                return null;
-            }).filter(Objects::nonNull).map(Path::of).forEach(result::add);
-        }).execute();
+        final var result = Executor.of(TOOL_LDD, path.toString()).quiet().saveOutput().execute();
 
-        if (ret != 0) {
-            // objdump failed. This is OK if the tool was applied to not a binary file
+        if (result.getExitCode() != 0) {
+            // ldd failed. This is OK if the tool was applied to not a binary file
             return Collections.emptyList();
         }
 
-        return result;
+        return result.stdout().stream().map(line -> {
+            Matcher matcher = LIB_IN_LDD_OUTPUT_REGEX.matcher(line);
+            if (matcher.find()) {
+                return matcher.group(1);
+            }
+            return null;
+        }).filter(Objects::nonNull).map(Path::of).toList();
     }
 
     private static Collection<Path> getNeededLibsForFiles(List<Path> paths) {
@@ -114,7 +108,7 @@ public final class LibProvidersLookup {
             try {
                 libs = getNeededLibsForFile(path);
             } catch (IOException ex) {
-                Log.verbose(ex);
+                Log.trace(ex, "Failed to get required libraries for [%s]", path);
                 libs = Collections.emptyList();
             }
             return libs;
